# SeeMoneySpending

./: CMakeLists.txt  GraphDesignHelper.h  MoneyHistoryDisplay.qml  README.md  SpendMoney.qml  SpendingGraph.qml  datamanager.cpp  datamanager.h  images.qrc  main.cpp  main.qml  moneyListModel.qml
android/: AndroidManifest.xml
